emissions data, inference tests, ability to do next token on non-0 BG CIFs

--- a/notebooks/rsync.ipynb
+++ b/notebooks/rsync.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -32,44 +32,59 @@
      "text": [
       "sending incremental file list\n",
       "./\n",
-      "Singularity.def\n",
-      "            926 100%    0.00kB/s    0:00:00 (xfr#1, to-chk=490/497)\n",
-      "Singularity_2.def\n",
-      "          1,156 100%  564.45kB/s    0:00:00 (xfr#2, to-chk=489/497)\n",
-      "requirements.txt\n",
-      "            215 100%   69.99kB/s    0:00:00 (xfr#3, to-chk=487/497)\n",
-      "true_vs_predicted_bandgap.png\n",
-      "         42,108 100%   10.04MB/s    0:00:00 (xfr#4, to-chk=485/497)\n",
+      ".vscode/launch.json\n",
+      "            740 100%    0.00kB/s    0:00:00 (xfr#1, to-chk=144/584)\n",
+      "bin/\n",
+      "bin/cifextd_inference copy.py\n",
+      "          9,525 100%    9.08MB/s    0:00:00 (xfr#2, to-chk=142/584)\n",
+      "bin/cifextd_inference.py\n",
+      "          6,929 100%    6.61MB/s    0:00:00 (xfr#3, to-chk=141/584)\n",
       "bin/regr_inference.py\n",
-      "          7,155 100%  776.37kB/s    0:00:00 (xfr#5, to-chk=105/497)\n",
+      "          7,875 100%    7.51MB/s    0:00:00 (xfr#4, to-chk=139/584)\n",
       "bin/train.py\n",
-      "         28,595 100%    2.73MB/s    0:00:00 (xfr#6, to-chk=96/497)\n",
+      "          6,435 100%    3.07MB/s    0:00:00 (xfr#5, to-chk=138/584)\n",
+      "bin/train_utils.py\n",
+      "         33,087 100%   10.52MB/s    0:00:00 (xfr#6, to-chk=137/584)\n",
       "bin/__pycache__/\n",
       "bin/__pycache__/train.cpython-310.pyc\n",
-      "         16,697 100%    1.33MB/s    0:00:00 (xfr#7, to-chk=93/497)\n",
-      "config/cif_extd_BG/finetune_LoRA_BG_nico.yaml\n",
-      "          1,691 100%  127.03kB/s    0:00:00 (xfr#8, to-chk=77/497)\n",
-      "config/cif_extd_BG/finetune_all_BG_nico.yaml\n",
-      "          1,603 100%  120.42kB/s    0:00:00 (xfr#9, to-chk=75/497)\n",
-      "config/cif_extd_BG/finetune_head_BG_nico.yaml\n",
-      "          1,708 100%  111.20kB/s    0:00:00 (xfr#10, to-chk=73/497)\n",
-      "config/regression_BG/\n",
-      "config/regression_BG/regression_BG_LoRA_myriad.yaml\n",
-      "          1,731 100%  112.70kB/s    0:00:00 (xfr#11, to-chk=71/497)\n",
-      "config/regression_BG/regression_BG_all.yaml\n",
-      "          1,666 100%  101.68kB/s    0:00:00 (xfr#12, to-chk=70/497)\n",
-      "config/regression_BG/regression_BG_all_myriad.yaml\n",
-      "          1,710 100%   98.23kB/s    0:00:00 (xfr#13, to-chk=69/497)\n",
-      "config/regression_BG/regression_BG_head_myriad.yaml\n",
-      "          1,713 100%   92.94kB/s    0:00:00 (xfr#14, to-chk=67/497)\n",
+      "          4,381 100%    1.39MB/s    0:00:00 (xfr#7, to-chk=131/584)\n",
+      "bin/__pycache__/train_utils.cpython-310.pyc\n",
+      "         19,476 100%    4.64MB/s    0:00:00 (xfr#8, to-chk=130/584)\n",
+      "bin/pre_processing/preprocess_more.py\n",
+      "          5,116 100%  999.22kB/s    0:00:00 (xfr#9, to-chk=114/584)\n",
+      "config/regression_BG/regression_BG_LoRA.yaml\n",
+      "          1,698 100%  331.64kB/s    0:00:00 (xfr#10, to-chk=82/584)\n",
+      "config/regression_BG/regression_BG_head.yaml\n",
+      "          1,703 100%  332.62kB/s    0:00:00 (xfr#11, to-chk=76/584)\n",
       "crystallm/_model.py\n",
-      "         28,748 100%    1.44MB/s    0:00:00 (xfr#15, to-chk=58/497)\n",
+      "         30,358 100%    4.83MB/s    0:00:00 (xfr#12, to-chk=65/584)\n",
       "crystallm/__pycache__/\n",
+      "crystallm/__pycache__/__init__.cpython-312.pyc\n",
+      "          1,518 100%  211.77kB/s    0:00:00 (xfr#13, to-chk=57/584)\n",
+      "crystallm/__pycache__/_metrics.cpython-312.pyc\n",
+      "          6,397 100%  892.44kB/s    0:00:00 (xfr#14, to-chk=53/584)\n",
       "crystallm/__pycache__/_model.cpython-310.pyc\n",
-      "         19,890 100%  924.94kB/s    0:00:00 (xfr#16, to-chk=47/497)\n",
+      "         20,718 100%    2.47MB/s    0:00:00 (xfr#15, to-chk=52/584)\n",
+      "crystallm/__pycache__/_model.cpython-312.pyc\n",
+      "         41,398 100%    4.39MB/s    0:00:00 (xfr#16, to-chk=51/584)\n",
+      "crystallm/__pycache__/_tokenizer.cpython-312.pyc\n",
+      "          6,845 100%  668.46kB/s    0:00:00 (xfr#17, to-chk=48/584)\n",
+      "crystallm/__pycache__/_tokenizer_cifextd.cpython-312.pyc\n",
+      "          7,352 100%  652.70kB/s    0:00:00 (xfr#18, to-chk=46/584)\n",
+      "crystallm/__pycache__/_utils.cpython-312.pyc\n",
+      "         11,912 100%  969.40kB/s    0:00:00 (xfr#19, to-chk=44/584)\n",
+      "sampling/prompt_config/\n",
+      "sampling/prompt_config/BG_gen_ft_LoRA.yaml\n",
+      "          1,001 100%   81.46kB/s    0:00:00 (xfr#20, to-chk=40/584)\n",
+      "sampling/prompt_config/BG_gen_ft_all.yaml\n",
+      "            948 100%   77.15kB/s    0:00:00 (xfr#21, to-chk=39/584)\n",
+      "sampling/prompt_config/BG_gen_ft_head.yaml\n",
+      "            854 100%   64.15kB/s    0:00:00 (xfr#22, to-chk=38/584)\n",
+      "sampling/prompt_config/inference_LoRA.yaml\n",
+      "            430 100%   32.30kB/s    0:00:00 (xfr#23, to-chk=37/584)\n",
       "\n",
-      "sent 79,330 bytes  received 2,540 bytes  54,580.00 bytes/sec\n",
-      "total size is 9,075,628,033  speedup is 110,854.14\n"
+      "sent 79,871 bytes  received 1,992 bytes  32,745.20 bytes/sec\n",
+      "total size is 9,075,927,133  speedup is 110,867.27\n"
      ]
     }
    ],
@@ -88,8 +103,80 @@
     "    --exclude 'compressed_datasets_models/' \\\n",
     "    --exclude 'model_ckpts/' \\\n",
     "    --exclude 'notebooks/' \\\n",
+    "    --exclude 'inference_plots/' \\\n",
+    "    --exclude 'hp_search/' \\\n",
     "    -e \"ssh -i ~/.ssh/exported-keyfile-from-putty-np -o ProxyJump=gateway\" \\\n",
     "    /home/uccacbo/CrystaLLM/ cyprien@nico.chem.ucl.ac.uk:/home/cyprien/CrystaLLM/\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " ------------------------------------------------------------------------\n",
+      " Information Systems - Information Services Division - UCL\n",
+      " \n",
+      " Access to and use of this system are restricted to authorised individuals\n",
+      " and subject to UCL Computing Regulations.\n",
+      " ------------------------------------------------------------------------\n",
+      " \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sending incremental file list\n",
+      "bin/\n",
+      "bin/cifextd_inference copy.py\n",
+      "          9,525 100%    0.00kB/s    0:00:00 (xfr#1, to-chk=98/538)\n",
+      "bin/cifextd_inference.py\n",
+      "          6,929 100%    6.61MB/s    0:00:00 (xfr#2, to-chk=97/538)\n",
+      "bin/regr_inference.py\n",
+      "          7,875 100%    7.51MB/s    0:00:00 (xfr#3, to-chk=95/538)\n",
+      "bin/train.py\n",
+      "          6,435 100%    6.14MB/s    0:00:00 (xfr#4, to-chk=94/538)\n",
+      "bin/__pycache__/\n",
+      "bin/__pycache__/train.cpython-310.pyc\n",
+      "          4,381 100%    4.18MB/s    0:00:00 (xfr#5, to-chk=87/538)\n",
+      "bin/__pycache__/train_utils.cpython-310.pyc\n",
+      "         19,476 100%   18.57MB/s    0:00:00 (xfr#6, to-chk=86/538)\n",
+      "crystallm/__pycache__/\n",
+      "crystallm/__pycache__/_model.cpython-310.pyc\n",
+      "         20,718 100%    9.88MB/s    0:00:00 (xfr#7, to-chk=8/538)\n",
+      "\n",
+      "sent 39,303 bytes  received 930 bytes  16,093.20 bytes/sec\n",
+      "total size is 8,911,561,484  speedup is 221,498.81\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "rsync -avzu --progress \\\n",
+    "    --exclude 'CIF_BG_proj/BG_CIFs/' \\\n",
+    "    --exclude 'useless/Miniconda3.sh' \\\n",
+    "    --exclude 'useless/cuda-repo-wsl-ubuntu-11-8-local_11.8.0-1_amd64.deb' \\\n",
+    "    --exclude 'crystallm_container.sif' \\\n",
+    "    --exclude 'wandb/' \\\n",
+    "    --exclude 'finetuned_models/' \\\n",
+    "    --exclude 'comp_metrics/' \\\n",
+    "    --exclude 'CIF_BG_proj/' \\\n",
+    "    --exclude 'compressed_datasets_models/' \\\n",
+    "    --exclude 'model_ckpts/' \\\n",
+    "    --exclude 'notebooks/' \\\n",
+    "    --exclude 'sampling/' \\\n",
+    "    --exclude 'useless/' \\\n",
+    "    --exclude 'inference_plots/' \\\n",
+    "    --exclude 'hp_search/' \\\n",
+    "    -e \"ssh -i ~/.ssh/exported-keyfile-from-putty-np -o ProxyJump=gateway\" \\\n",
+    "    /home/uccacbo/CrystaLLM/ uccacbo@myriad.rc.ucl.ac.uk:/scratch/scratch/uccacbo/CrystaLLM/"
    ]
   },
   {
@@ -101,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -123,22 +210,87 @@
      "output_type": "stream",
      "text": [
       "receiving incremental file list\n",
-      "config/cif_extd_BG/finetune_LoRA_BG_nico.yaml\n",
-      "config/cif_extd_BG/finetune_head_BG_nico.yaml\n",
-      "config/regression_BG/regression_BG_LoRA_nico.yaml\n",
-      "config/regression_BG/regression_BG_all_nico.yaml\n",
-      "config/regression_BG/regression_BG_head.yaml\n",
-      "config/regression_BG/regression_BG_head_nico.yaml\n",
+      "model_ckpts/\n",
+      "model_ckpts/finetuned_models/\n",
+      "model_ckpts/finetuned_models/BG_LoRA/\n",
+      "model_ckpts/finetuned_models/BG_LoRA/ckpt.pt\n",
+      "    828,317,827 100%   11.42MB/s    0:01:09 (xfr#1, to-chk=53/549)\n",
+      "model_ckpts/finetuned_models/BG_all/\n",
+      "model_ckpts/finetuned_models/BG_all/ckpt.pt\n",
+      "  2,446,171,898 100%    8.52MB/s    0:04:33 (xfr#2, to-chk=52/549)\n",
+      "model_ckpts/finetuned_models/BG_head/\n",
+      "model_ckpts/finetuned_models/BG_head/ckpt.pt\n",
+      "    818,442,232 100%    9.41MB/s    0:01:22 (xfr#3, to-chk=51/549)\n",
+      "model_ckpts/finetuned_models_with_0BG/\n",
+      "model_ckpts/finetuned_models_with_0BG/BG_LoRA/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "rsync: [receiver] mkstemp \"/home/uccacbo/CrystaLLM/model_ckpts/finetuned_models_with_0BG/BG_LoRA/.ckpt.pt.B69x2x\" failed: No such file or directory (2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error while terminating subprocess (pid=429174): \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    828,317,827 100%   10.98MB/s    0:01:11 (xfr#4, to-chk=47/549)\n",
+      "model_ckpts/finetuned_models_with_0BG/BG_all/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "rsync: [receiver] mkstemp \"/home/uccacbo/CrystaLLM/model_ckpts/finetuned_models_with_0BG/BG_all/.ckpt.pt.K8cF2Q\" failed: No such file or directory (2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  2,446,171,898 100%   12.06MB/s    0:03:13 (xfr#5, to-chk=46/549)\n",
+      "model_ckpts/finetuned_models_with_0BG/BG_head/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "rsync: [receiver] mkstemp \"/home/uccacbo/CrystaLLM/model_ckpts/finetuned_models_with_0BG/BG_head/.ckpt.pt.ELO2eK\" failed: No such file or directory (2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    818,442,232 100%   13.64MB/s    0:00:57 (xfr#6, to-chk=45/549)\n",
       "\n",
-      "sent 585 bytes  received 17,330 bytes  5,118.57 bytes/sec\n",
-      "total size is 11,579,756,218  speedup is 646,372.10 (DRY RUN)\n"
+      "sent 816 bytes  received 7,525,702,484 bytes  10,054,379.83 bytes/sec\n",
+      "total size is 19,765,909,533  speedup is 2.63\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "rsync error: some files/attrs were not transferred (see previous errors) (code 23) at main.c(1865) [generator=3.2.7]\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "\n",
-    "rsync -avzu --dry-run --progress\\\n",
+    "rsync -avzu --progress\\\n",
     "    --exclude 'CIF_BG_proj/' \\\n",
     "    --exclude 'crystallm_container.sif' \\\n",
     "    --exclude 'crystallm_container_v2.sif' \\\n",
@@ -148,6 +300,7 @@
     "    --exclude 'model_ckpts/regression_models/BG_head' \\\n",
     "    --exclude 'model_ckpts/regression_models/BG_LoRA' \\\n",
     "    --exclude 'model_ckpts/regression_models/BG_head_test' \\\n",
+    "    --exclude 'model_ckpts/finetuned_models_wrong/' \\\n",
     "    --exclude 'crystallm/' \\\n",
     "    --exclude 'bin/' \\\n",
     "    --exclude 'notebooks/' \\\n",
@@ -158,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +325,10 @@
       " Access to and use of this system are restricted to authorised individuals\n",
       " and subject to UCL Computing Regulations.\n",
       " ------------------------------------------------------------------------\n",
-      " \n"
+      " \n",
+      "Currently Loaded Modulefiles:\n",
+      " 1) gcc-libs/10.2.0        3) cuda/11.8.0/gnu-10.2.0   5) tmux/3.3a  \n",
+      " 2) compilers/gnu/10.2.0   4) nano/2.4.2              \n"
      ]
     },
     {
@@ -181,24 +337,18 @@
      "text": [
       "receiving incremental file list\n",
       "./\n",
-      "comp_metrics/\n",
-      "comp_metrics/crystallm_regression_BG_myriad/\n",
-      "config/cif_extd_BG/finetune_LoRA_BG_nico.yaml\n",
-      "            764 100%  746.09kB/s    0:00:00 (xfr#1, to-chk=53/445)\n",
-      "config/cif_extd_BG/finetune_head_BG_nico.yaml\n",
-      "            753 100%  735.35kB/s    0:00:00 (xfr#2, to-chk=49/445)\n",
-      "config/regression_BG/\n",
-      "config/regression_BG/regression_BG_LoRA_myriad.yaml\n",
-      "          1,731 100%  845.21kB/s    0:00:00 (xfr#3, to-chk=47/445)\n",
-      "config/regression_BG/regression_BG_all_myriad.yaml\n",
-      "          1,710 100%  834.96kB/s    0:00:00 (xfr#4, to-chk=45/445)\n",
-      "config/regression_BG/regression_BG_head.yaml\n",
-      "          1,662 100%  811.52kB/s    0:00:00 (xfr#5, to-chk=44/445)\n",
-      "config/regression_BG/regression_BG_head_myriad.yaml\n",
-      "          1,713 100%  418.21kB/s    0:00:00 (xfr#6, to-chk=43/445)\n",
+      "crystallm_regression_BG_myriad/\n",
+      "crystallm_regression_BG_myriad/emissions.csv\n",
+      "          2,816 100%    2.69MB/s    0:00:00 (xfr#1, to-chk=2/15)\n",
+      "hps_regression_BG_myriad/\n",
+      "hps_regression_BG_myriad/emissions.csv\n",
+      "          1,836 100%    1.75MB/s    0:00:00 (xfr#2, to-chk=1/15)\n",
+      "hps_regression_BG_myriad_LoRA/\n",
+      "hps_regression_BG_myriad_LoRA/emissions.csv\n",
+      "          4,789 100%    4.57MB/s    0:00:00 (xfr#3, to-chk=0/15)\n",
       "\n",
-      "sent 806 bytes  received 18,315 bytes  695.31 bytes/sec\n",
-      "total size is 9,075,362,676  speedup is 474,628.04\n"
+      "sent 541 bytes  received 4,297 bytes  1,935.20 bytes/sec\n",
+      "total size is 29,220  speedup is 6.04\n"
      ]
     }
    ],
@@ -243,12 +393,12 @@
     "    --exclude 'config/' \\\n",
     "    --exclude 'notebooks/' \\\n",
     "    --exclude 'wandb/' \\\n",
-    "    /home/cyprien/CrystaLLM/ uccacbo@myriad.rc.ucl.ac.uk:/home/uccacbo/CrystaLLM/\n"
+    "    /home/cyprien/CrystaLLM/ uccacbo@myriad.rc.ucl.ac.uk:/scratch/scratch/uccacbo/CrystaLLM/\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -269,27 +419,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "receiving incremental file list\n",
-      "compressed_datasets_models/\n",
-      "compressed_datasets_models/CIFs_db_MP.pkl\n",
-      "      1,325,598 100%   23.85MB/s    0:00:00 (xfr#1, to-chk=6/11)\n",
-      "\n",
-      "sent 47 bytes  received 166,901 bytes  111,298.67 bytes/sec\n",
-      "total size is 13,895,193,970  speedup is 83,230.67\n"
+      "Error while terminating subprocess (pid=53219): \n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "\n",
-    "rsync -avzu --progress \\\n",
+    "rsync -avzu --dry-run --progress \\\n",
     "    -e \"ssh -i ~/.ssh/exported-keyfile-from-putty-np -o ProxyJump=gateway\" \\\n",
-    "    cyprien@nico.chem.ucl.ac.uk:/home/cyprien/CrystaLLM/compressed_datasets_models /home/uccacbo/CrystaLLM/\n"
+    "    uuccacbo@myriad.rc.ucl.ac.uk:/scratch/scratch/uccacbo/CrystaLLM/inference_plots /home/uccacbo/CrystaLLM/inference_plots/\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,21 +455,22 @@
      "output_type": "stream",
      "text": [
       "sending incremental file list\n",
-      "BG_large_tokens/BG_large_tokens.tar.gz\n",
-      "     22,054,911 100%   12.01MB/s    0:00:01 (xfr#1, to-chk=5/7)\n",
-      "BG_large_tokens/meta.pkl\n",
-      "          7,567 100%   10.77kB/s    0:00:00 (xfr#2, to-chk=4/7)\n",
-      "BG_large_tokens/starts.pkl\n",
-      "        490,563 100%  674.74kB/s    0:00:00 (xfr#3, to-chk=3/7)\n",
-      "BG_large_tokens/starts_val.pkl\n",
-      "         54,300 100%   74.69kB/s    0:00:00 (xfr#4, to-chk=2/7)\n",
-      "BG_large_tokens/train.bin\n",
-      "    113,583,494 100%   46.55MB/s    0:00:02 (xfr#5, to-chk=1/7)\n",
-      "BG_large_tokens/val.bin\n",
-      "     12,661,580 100%   25.80MB/s    0:00:00 (xfr#6, to-chk=0/7)\n",
+      "./\n",
+      "BG_large_tokens_excl_0BG.tar.gz\n",
+      "     13,367,701 100%   12.63MB/s    0:00:01 (xfr#1, to-chk=5/7)\n",
+      "meta.pkl\n",
+      "          7,567 100%    7.22MB/s    0:00:00 (xfr#2, to-chk=4/7)\n",
+      "starts.pkl\n",
+      "        259,287 100%   27.48MB/s    0:00:00 (xfr#3, to-chk=3/7)\n",
+      "starts_val.pkl\n",
+      "         13,468 100%    1.28MB/s    0:00:00 (xfr#4, to-chk=2/7)\n",
+      "train.bin\n",
+      "     70,520,270 100%   66.52MB/s    0:00:01 (xfr#5, to-chk=1/7)\n",
+      "val.bin\n",
+      "      3,667,680 100%   61.36MB/s    0:00:00 (xfr#6, to-chk=0/7)\n",
       "\n",
-      "sent 45,207,605 bytes  received 129,067 bytes  6,974,872.62 bytes/sec\n",
-      "total size is 148,852,415  speedup is 3.28\n"
+      "sent 27,436,022 bytes  received 133 bytes  6,096,923.33 bytes/sec\n",
+      "total size is 87,835,973  speedup is 3.20\n"
      ]
     }
    ],
@@ -334,7 +479,7 @@
     "\n",
     "rsync -avzu --progress \\\n",
     "    -e \"ssh -i ~/.ssh/exported-keyfile-from-putty-np -o ProxyJump=gateway\" \\\n",
-    "    /home/uccacbo/CrystaLLM/CIF_BG_proj/BG_large_tokens cyprien@nico.chem.ucl.ac.uk:/home/cyprien/CrystaLLM/CIF_BG_proj/\n"
+    "    /home/uccacbo/CrystaLLM/CIF_BG_proj/BG_large_tokens_excl_0BG/ cyprien@nico.chem.ucl.ac.uk:/home/cyprien/CrystaLLM/CIF_BG_proj/\n"
    ]
   },
   {
