--- a/notebooks/tokenizing_BG.ipynb
+++ b/notebooks/tokenizing_BG.ipynb
@@ -288,38 +288,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading data from BG_cifs_process_steps/BG_large_dedup.pkl.gz...\n",
-      "100%|█████████████████████████████████| 114751/114751 [01:01<00:00, 1870.30it/s]\n",
-      "number of CIFs: 114744\n",
-      "saving data to BG_cifs_process_steps/BG_large_prep.pkl.gz...\n"
+      "loading data from CIF_BG_proj/BG_cifs_process_steps/BG_large_dedup.pkl.gz...\n",
+      "100%|█████████████████████████████████| 114751/114751 [00:46<00:00, 2471.04it/s]\n",
+      "number of CIFs: 57476\n",
+      "saving data to CIF_BG_proj/BG_cifs_process_steps/BG_large_prep.pkl.gz...\n"
      ]
     }
    ],
    "source": [
     "#Data augmentation preprocess step\n",
-    "!python bin/preprocess_more.py BG_cifs_process_steps/BG_large_dedup.pkl.gz --out BG_cifs_process_steps/BG_large_prep.pkl.gz --workers 4"
+    "!python bin/pre_processing/preprocess_more.py CIF_BG_proj/BG_cifs_process_steps/BG_large_dedup.pkl.gz --out CIF_BG_proj/BG_cifs_process_steps/BG_large_prep.pkl.gz --workers 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Te2Mo3W(SeS2)2_mp-1030462',\n",
-       "  \"# generated using pymatgen\\ndata_Te2Mo3W1Se2S4\\nloop_\\n _atom_type_symbol\\n _atom_type_electronegativity\\n _atom_type_radius\\n _atom_type_ionic_radius\\n  Te  2.1000  1.4000  1.2933\\n  Mo  2.1600  1.4500  0.7750\\n  W  2.3600  1.3500  0.7667\\n  Se  2.5500  1.1500  1.0133\\n  S  2.5800  1.0000  0.8800\\n_symmetry_space_group_name_H-M   P3m1\\n_cell_length_a   3.3105\\n_cell_length_b   3.3105\\n_cell_length_c   37.2684\\n_cell_angle_alpha   90.0000\\n_cell_angle_beta   90.0000\\n_cell_angle_gamma   120.0000\\n_symmetry_Int_Tables_number   156\\n_chemical_formula_structural   Te2Mo3W(SeS2)2\\n_chemical_formula_sum   'Te2 Mo3 W1 Se2 S4'\\n_cell_volume   353.7148\\n_cell_formula_units_Z   1\\nloop_\\n _symmetry_equiv_pos_site_id\\n _symmetry_equiv_pos_as_xyz\\n  1  'x, y, z'\\nloop_\\n _atom_site_type_symbol\\n _atom_site_label\\n _atom_site_symmetry_multiplicity\\n _atom_site_fract_x\\n _atom_site_fract_y\\n _atom_site_fract_z\\n _atom_site_occupancy\\n  Te  Te0  1  0.6667  0.3333  0.0426  1.0\\n  Te  Te1  1  0.6667  0.3333  0.1452  1.0\\n  Mo  Mo2  1  0.3333  0.6667  0.0939  1.0\\n  Mo  Mo3  1  0.3333  0.6667  0.4697  1.0\\n  Mo  Mo4  1  0.6667  0.3333  0.2818  1.0\\n  W  W5  1  0.6667  0.3333  0.6575  1.0\\n  Se  Se6  1  0.6667  0.3333  0.4247  1.0\\n  Se  Se7  1  0.6667  0.3333  0.5147  1.0\\n  S  S8  1  0.3333  0.6667  0.2408  1.0\\n  S  S9  1  0.3333  0.6667  0.3228  1.0\\n  S  S10  1  0.3333  0.6667  0.6164  1.0\\n  S  S11  1  0.3333  0.6667  0.6987  1.0\\nBandgap_eV: 0.00\\n\\n\")]"
+       "[('Li3CoO3_mp-867660',\n",
+       "  \"# generated using pymatgen\\ndata_Li12Co4O12\\nloop_\\n _atom_type_symbol\\n _atom_type_electronegativity\\n _atom_type_radius\\n _atom_type_ionic_radius\\n  Li  0.9800  1.4500  0.9000\\n  Co  1.8800  1.3500  0.7683\\n  O  3.4400  0.6000  1.2600\\n_symmetry_space_group_name_H-M   P4_2/mnm\\n_cell_length_a   8.7388\\n_cell_length_b   8.7388\\n_cell_length_c   3.6236\\n_cell_angle_alpha   90.0000\\n_cell_angle_beta   90.0000\\n_cell_angle_gamma   90.0000\\n_symmetry_Int_Tables_number   136\\n_chemical_formula_structural   Li3CoO3\\n_chemical_formula_sum   'Li12 Co4 O12'\\n_cell_volume   276.7193\\n_cell_formula_units_Z   4\\nloop_\\n _symmetry_equiv_pos_site_id\\n _symmetry_equiv_pos_as_xyz\\n  1  'x, y, z'\\nloop_\\n _atom_site_type_symbol\\n _atom_site_label\\n _atom_site_symmetry_multiplicity\\n _atom_site_fract_x\\n _atom_site_fract_y\\n _atom_site_fract_z\\n _atom_site_occupancy\\n  Li  Li0  8  0.1040  0.3573  0.5000  1.0\\n  Li  Li1  4  0.1648  0.1648  0.0000  1.0\\n  Co  Co2  4  0.1153  0.8847  0.5000  1.0\\n  O  O3  8  0.1113  0.6787  0.5000  1.0\\n  O  O4  4  0.0993  0.0993  0.5000  1.0\\nBandgap_eV 1.22\\n\\n\")]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
     "import gzip\n",
     "\n",
     "# load the data\n",
-    "with gzip.open('BG_cifs_process_steps/BG_large_prep.pkl.gz', 'rb') as f:\n",
+    "with gzip.open('CIF_BG_proj/BG_cifs_process_steps/BG_large_prep.pkl.gz', 'rb') as f:\n",
     "    BG_cifs_more_prep = pickle.load(f)\n",
     "\n",
     "# display the first few entries\n",
@@ -346,18 +346,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading data from BG_cifs_process_steps/BG_large_prep.pkl.gz...\n",
+      "loading data from CIF_BG_proj/BG_cifs_process_steps/BG_large_prep.pkl.gz...\n",
       "splitting dataset...\n",
-      "number of CIFs in train set: 98,105\n",
-      "number of CIFs in validation set: 10,901\n",
-      "number of CIFs in test set: 5,738\n",
+      "number of CIFs in train set: 51,871\n",
+      "number of CIFs in validation set: 2,731\n",
+      "number of CIFs in test set: 2,874\n",
       "writing train set...\n",
       "writing validation set...\n",
       "writing test set...\n"
@@ -366,17 +366,17 @@
    ],
    "source": [
     "# split dataset into train and test and val\n",
-    "!python bin/split.py BG_cifs_process_steps/BG_large_prep.pkl.gz \\\n",
-    "--train_out BG_cifs_process_steps/BG_large_train.pkl.gz \\\n",
-    "--val_out BG_cifs_process_steps/BG_large_val.pkl.gz \\\n",
-    "--test_out BG_cifs_process_steps/BG_large_test.pkl.gz \\\n",
-    "--validation_size 0.1 \\\n",
+    "!python bin/pre_processing/split.py CIF_BG_proj/BG_cifs_process_steps/BG_large_prep.pkl.gz \\\n",
+    "--train_out CIF_BG_proj/BG_cifs_process_steps/BG_large_train_excl_0BG.pkl.gz \\\n",
+    "--val_out CIF_BG_proj/BG_cifs_process_steps/BG_large_val_excl_0BG.pkl.gz \\\n",
+    "--test_out CIF_BG_proj/BG_cifs_process_steps/BG_large_test_excl_0BG.pkl.gz \\\n",
+    "--validation_size 0.05 \\\n",
     "--test_size 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "'/home/uccacbo/CrystaLLM'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "  \"# generated using pymatgen\\ndata_K4Fe4Co4P8O32\\nloop_\\n _atom_type_symbol\\n _atom_type_electronegativity\\n _atom_type_radius\\n _atom_type_ionic_radius\\n  K  0.8200  2.2000  1.5200\\n  Fe  1.8300  1.4000  0.8525\\n  Co  1.8800  1.3500  0.7683\\n  P  2.1900  1.0000  0.5500\\n  O  3.4400  0.6000  1.2600\\n_symmetry_space_group_name_H-M   P2_1/c\\n_cell_length_a   5.2211\\n_cell_length_b   14.6317\\n_cell_length_c   9.3914\\n_cell_angle_alpha   90.0000\\n_cell_angle_beta   104.7150\\n_cell_angle_gamma   90.0000\\n_symmetry_Int_Tables_number   14\\n_chemical_formula_structural   KFeCo(PO4)2\\n_chemical_formula_sum   'K4 Fe4 Co4 P8 O32'\\n_cell_volume   693.9139\\n_cell_formula_units_Z   4\\nloop_\\n _symmetry_equiv_pos_site_id\\n _symmetry_equiv_pos_as_xyz\\n  1  'x, y, z'\\nloop_\\n _atom_site_type_symbol\\n _atom_site_label\\n _atom_site_symmetry_multiplicity\\n _atom_site_fract_x\\n _atom_site_fract_y\\n _atom_site_fract_z\\n _atom_site_occupancy\\n  K  K0  4  0.1790  0.1749  0.3158  1.0\\n  Fe  Fe1  4  0.2256  0.6282  0.8817  1.0\\n  Co  Co2  4  0.2436  0.0477  0.9633  1.0\\n  P  P3  4  0.2558  0.6727  0.5379  1.0\\n  P  P4  4  0.3097  0.0070  0.6766  1.0\\n  O  O5  4  0.0638  0.0489  0.7237  1.0\\n  O  O6  4  0.0892  0.5864  0.4694  1.0\\n  O  O7  4  0.1172  0.7445  0.9448  1.0\\n  O  O8  4  0.2214  0.5796  0.0838  1.0\\n  O  O9  4  0.2308  0.6890  0.6963  1.0\\n  O  O10  4  0.4157  0.0800  0.5860  1.0\\n  O  O11  4  0.4531  0.1662  0.9676  1.0\\n  O  O12  4  0.4913  0.0151  0.1759  1.0\\nBandgap_eV: 0.27\\n\\n\")]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,45 +469,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading data from CIF_BG_proj/BG_cifs_process_steps/BG_large_train.pkl.gz...\n",
-      "loading data from CIF_BG_proj/BG_cifs_process_steps/BG_large_val.pkl.gz...\n",
-      "preparing files...: 100%|██████████████| 98105/98105 [00:01<00:00, 69981.39it/s]\n",
-      "preparing files...: 100%|██████████████| 10901/10901 [00:00<00:00, 59366.02it/s]\n",
-      "tokenizing...: 100%|████████████████████| 98105/98105 [00:32<00:00, 2995.77it/s]\n",
+      "loading data from CIF_BG_proj/BG_cifs_process_steps/BG_large_train_excl_0BG.pkl.gz...\n",
+      "loading data from CIF_BG_proj/BG_cifs_process_steps/BG_large_val_excl_0BG.pkl.gz...\n",
+      "preparing files...: 100%|██████████████| 51871/51871 [00:00<00:00, 69496.19it/s]\n",
+      "preparing files...: 100%|████████████████| 2731/2731 [00:00<00:00, 76420.34it/s]\n",
+      "tokenizing...: 100%|████████████████████| 51871/51871 [00:18<00:00, 2762.08it/s]\n",
       "train min tokenized length: 197\n",
       "train max tokenized length: 6,930\n",
-      "train mean tokenized length: 578.89 +/- 462.86\n",
+      "train mean tokenized length: 679.77 +/- 504.02\n",
       "train total unk counts: 0\n",
-      "tokenizing...: 100%|█████████████████████| 10901/10901 [00:11<00:00, 922.49it/s]\n",
-      "val min tokenized length: 200\n",
-      "val max tokenized length: 6,451\n",
-      "val mean tokenized length: 580.75 +/- 488.00\n",
+      "tokenizing...: 100%|███████████████████████| 2731/2731 [00:03<00:00, 839.82it/s]\n",
+      "val min tokenized length: 201\n",
+      "val max tokenized length: 5,876\n",
+      "val mean tokenized length: 671.49 +/- 478.94\n",
       "val total unk counts: 0\n",
-      "concatenating train tokens...: 100%|██| 98105/98105 [00:00<00:00, 185326.88it/s]\n",
-      "concatenating val tokens...: 100%|████| 10901/10901 [00:00<00:00, 487182.82it/s]\n",
+      "concatenating train tokens...: 100%|██| 51871/51871 [00:00<00:00, 181855.73it/s]\n",
+      "concatenating val tokens...: 100%|██████| 2731/2731 [00:00<00:00, 250714.50it/s]\n",
       "encoding...\n",
-      "train has 56,791,747 tokens\n",
-      "val has 6,330,790 tokens\n",
+      "train has 35,260,135 tokens\n",
+      "val has 1,833,840 tokens\n",
       "vocab size: 372\n",
       "exporting to .bin files...\n",
       "creating tar.gz archive...\n",
-      "tarball created at CIF_BG_proj/BG_large_tokens/BG_large_tokens.tar.gz\n"
+      "tarball created at CIF_BG_proj/BG_large_tokens_excl_0BG/BG_large_tokens_excl_0BG.tar.gz\n"
      ]
     }
    ],
    "source": [
     "# try to tokenize the data\n",
-    "!python bin/tokenize_cifs_cifextd.py \\\n",
-    "--train_fname CIF_BG_proj/BG_cifs_process_steps/BG_large_train.pkl.gz \\\n",
-    "--val_fname CIF_BG_proj/BG_cifs_process_steps/BG_large_val.pkl.gz \\\n",
-    "--out_dir CIF_BG_proj/BG_large_tokens \\\n",
+    "!python bin/pre_processing/tokenize_cifs_cifextd.py \\\n",
+    "--train_fname CIF_BG_proj/BG_cifs_process_steps/BG_large_train_excl_0BG.pkl.gz \\\n",
+    "--val_fname CIF_BG_proj/BG_cifs_process_steps/BG_large_val_excl_0BG.pkl.gz \\\n",
+    "--out_dir CIF_BG_proj/BG_large_tokens_excl_0BG \\\n",
     "--workers 4\n",
     "\n",
     "# # try to tokenize the data\n",
@@ -520,77 +520,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decoded train data: data_Zn4Fe4Ge8O24\n",
+      "Decoded train data: data_Y1Bi2Br1O4\n",
       "loop_\n",
       "_atom_type_symbol\n",
       "_atom_type_electronegativity\n",
       "_atom_type_radius\n",
       "_atom_type_ionic_radius\n",
-      "Zn 1.6500 1.3500 0.8800\n",
-      "Fe 1.8300 1.4000 0.8525\n",
-      "Ge 2.0100 1.2500 0.7700\n",
+      "Y 1.2200 1.8000 1.0400\n",
+      "Bi 2.0200 1.6000 1.0350\n",
+      "Br 2.9600 1.1500 0.8825\n",
       "O 3.4400 0.6000 1.2600\n",
-      "_symmetry_space_group_name_H-M C2/c\n",
-      "_cell_length_a 10.0434\n",
-      "_cell_length_b 9.4187\n",
-      "_cell_length_c 5.3906\n",
-      "_cell_angle_alpha 90.0000\n",
-      "_cell_angle_beta 106.0476\n",
-      "_cell_angle_gamma 90.0000\n",
-      "_symmetry_Int_Tables_number 15\n",
-      "_chemical_formula_structural ZnFe(GeO3)2\n",
-      "_chemical_formula_sum 'Zn4 Fe4 Ge8 O24'\n",
-      "_cell_volume 490.0609\n",
-      "_cell_formula_units_Z 4\n",
-      "loop_\n",
-      "_symmetry_equiv_pos_site_id\n",
-      "_symmetry_equiv_pos_as_xyz\n",
-      "1 'x, y, z'\n",
-      "loop_\n",
-      "_atom_site_type_symbol\n",
-      "_atom_site_label\n",
-      "_atom_site_symmetry_multiplicity\n",
-      "_atom_site_fract_x\n",
-      "_atom_site_fract_y\n",
-      "_atom_site_fract_z\n",
-      "_atom_site_occupancy\n",
-      "Zn Zn0 4 0.0000 0.2501 0.2500 1.0\n",
-      "Fe Fe1 4 0.0000 0.0972 0.7500 1.0\n",
-      "Ge Ge2 8 0.1994 0.4112 0.7549 1.0\n",
-      "O O3 8 0.1148 0.2573 0.6092 1.0\n",
-      "O O4 8 0.1168 0.0865 0.1467 1.0\n",
-      "O O5 8 0.1424 0.4415 0.0389 1.0\n",
-      "Bandgap_eV 1.28\n",
-      "\n",
-      "data_P4H24N4O16\n",
-      "loop_\n",
-      "_atom_type_symbol\n",
-      "_atom_type_electronegativity\n",
-      "_atom_type_radius\n",
-      "_atom_type_ionic_radius\n",
-      "P 2.1900 1.0000 0.5500\n",
-      "H 2.2000 0.2500 0.0000\n",
-      "N 3.0400 0.6500 0.6300\n",
-      "O 3.4400 0.6000 1.2600\n",
-      "_symmetry_space_group_name_H-M I-42d\n",
-      "_cell_length_a 7.3873\n",
-      "_cell_length_b 7.3873\n",
-      "_cell_length_c 7.9485\n",
+      "_symmetry_space_group_name_H-M P4/mmm\n",
+      "_cell_length_a 3.9197\n",
+      "_cell_length_b 3.9197\n",
+      "_cell_length_c 9.3417\n",
       "_cell_angle_alpha 90.0000\n",
       "_cell_angle_beta 90.0000\n",
       "_cell_angle_gamma 90.0000\n",
-      "_symmetry_Int_Tables_number 122\n",
-      "_chemical_formula_structural PH6NO4\n",
-      "_chemical_formula_sum 'P4 H24 N4 O16'\n",
-      "_cell_volume 433.7637\n",
-      "_cell_formula_units_Z 4\n",
+      "_symmetry_Int_Tables_number 123\n",
+      "_chemical_formula_structural YBi2BrO4\n",
+      "_chemical_formula_sum 'Y1 Bi2 Br1 O4'\n",
+      "_cell_volume 143.5245\n",
+      "_cell_formula_units_Z 1\n",
       "loop_\n",
       "_symmetry_equiv_pos_site_id\n",
       "_symmetry_equiv_pos_as_xyz\n",
@@ -603,17 +561,59 @@
       "_atom_site_fract_y\n",
       "_atom_site_fract_z\n",
       "_atom_site_occupancy\n",
-      "P P0 4 0.0000 0.0000 0.0000 1.0\n",
-      "H H1 16 0.0195 0.1146 0.4261 1.0\n",
-      "H H2 8 0.1453 0.7500 0.1250 1.0\n",
-      "N N3 4 0.0000 0.0000 0.5000 1.0\n",
-      "O O4 16 0.0876 0.3488 0.3593 1.0\n",
-      "Bandgap_eV 5.79\n",
+      "Y Y0 1 0.0000 0.0000 0.0000 1.0\n",
+      "Bi Bi1 2 0.5000 0.5000 0.2687 1.0\n",
+      "Br Br2 1 0.0000 0.0000 0.5000 1.0\n",
+      "O O3 4 0.0000 0.5000 0.1487 1.0\n",
+      "Bandgap_eV 1.40\n",
       "\n",
-      "data_Ta8Zn16O36\n",
+      "data_Ba16Ge16N32\n",
       "loop_\n",
       "_atom_type_symbol\n",
-      "_atom_type_electronegati\n"
+      "_atom_type_electronegativity\n",
+      "_atom_type_radius\n",
+      "_atom_type_ionic_radius\n",
+      "Ba 0.8900 2.1500 1.4900\n",
+      "Ge 2.0100 1.2500 0.7700\n",
+      "N 3.0400 0.6500 0.6300\n",
+      "_symmetry_space_group_name_H-M Pbca\n",
+      "_cell_length_a 5.5931\n",
+      "_cell_length_b 11.2234\n",
+      "_cell_length_c 16.6628\n",
+      "_cell_angle_alpha 90.0000\n",
+      "_cell_angle_beta 90.0000\n",
+      "_cell_angle_gamma 90.0000\n",
+      "_symmetry_Int_Tables_number 61\n",
+      "_chemical_formula_structural BaGeN2\n",
+      "_chemical_formula_sum 'Ba16 Ge16 N32'\n",
+      "_cell_volume 1045.9830\n",
+      "_cell_formula_units_Z 16\n",
+      "loop_\n",
+      "_symmetry_equiv_pos_site_id\n",
+      "_symmetry_equiv_pos_as_xyz\n",
+      "1 'x, y, z'\n",
+      "loop_\n",
+      "_atom_site_type_symbol\n",
+      "_atom_site_label\n",
+      "_atom_site_symmetry_multiplicity\n",
+      "_atom_site_fract_x\n",
+      "_atom_site_fract_y\n",
+      "_atom_site_fract_z\n",
+      "_atom_site_occupancy\n",
+      "Ba Ba0 8 0.1631 0.7327 0.6859 1.0\n",
+      "Ba Ba1 8 0.2450 0.5198 0.0661 1.0\n",
+      "Ge Ge2 8 0.1940 0.7375 0.9372 1.0\n",
+      "Ge Ge3 8 0.2449 0.5092 0.3120 1.0\n",
+      "N N4 8 0.0641 0.0253 0.7187 1.0\n",
+      "N N5 8 0.1204 0.2083 0.5249 1.0\n",
+      "N N6 8 0.1742 0.6684 0.3426 1.0\n",
+      "N N7 8 0.1779 0.0871 0.9034 1.0\n",
+      "Bandgap_eV 2.53\n",
+      "\n",
+      "data_Ca2Mg1Fe1C4O12\n",
+      "loop_\n",
+      "_atom_type_symbol\n",
+      "_atom_typ\n"
      ]
     }
    ],
@@ -631,9 +631,9 @@
     "from crystallm._tokenizer_cifextd import CIFTokenizer_extd\n",
     "\n",
     "# Load tokenized data\n",
-    "train_data_path = \"test/train.bin\"\n",
-    "val_data_path = \"test/val.bin\"\n",
-    "meta_path = \"test/meta.pkl\"\n",
+    "train_data_path = \"CIF_BG_proj/BG_large_tokens_excl_0BG/train.bin\"\n",
+    "val_data_path = \"CIF_BG_proj/BG_large_tokens_excl_0BG/val.bin\"\n",
+    "meta_path = \"CIF_BG_proj/BG_large_tokens_excl_0BG/meta.pkl\"\n",
     "\n",
     "# Load the tokenizer and tokenized data\n",
     "tokenizer = CIFTokenizer_extd()\n",
@@ -870,23 +870,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "identifying starts...: 100%|████| 56791747/56791747 [01:21<00:00, 697069.42it/s]\n",
-      "identifying starts...: 100%|██████| 6330790/6330790 [00:08<00:00, 726612.59it/s]\n"
+      "identifying starts...: 100%|████| 35260135/35260135 [00:59<00:00, 592225.82it/s]\n",
+      "identifying starts...: 100%|██████| 1833840/1833840 [00:03<00:00, 576683.82it/s]\n"
      ]
     }
    ],
    "source": [
     "# Identifying start indices\n",
-    "!python bin/identify_starts.py \\\n",
-    "--dataset_fname CIF_BG_proj/BG_large_tokens/BG_large_tokens.tar.gz \\\n",
-    "--out_fname CIF_BG_proj/BG_large_tokens/starts.pkl"
+    "!python bin/pre_processing/identify_starts.py \\\n",
+    "--dataset_fname CIF_BG_proj/BG_large_tokens_excl_0BG/BG_large_tokens_excl_0BG.tar.gz \\\n",
+    "--out_fname CIF_BG_proj/BG_large_tokens_excl_0BG/starts.pkl"
    ]
   },
   {
