--- a/notebooks/tokenizing_BG.ipynb
+++ b/notebooks/tokenizing_BG.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/uccacbo/CrystaLLM'"
+       "'/home/uccacbo/CrystaLLM-Prop'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,7 +22,7 @@
     "os.getcwd()\n",
     "\n",
     "# change directory to where the data is\n",
-    "os.chdir('/home/uccacbo/CrystaLLM')\n",
+    "os.chdir('/home/uccacbo/CrystaLLM-Prop')\n",
     "os.getcwd()"
    ]
   },
@@ -179,16 +179,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading data from BG_datasets/BG_CIF_dataset_large.tar.gz...\n",
-      "extracting files...: 100%|███████████| 126334/126334 [00:04<00:00, 30304.52it/s]\n",
-      "saving data to BG_cifs_process_steps/BG_data_large.pkl.gz...\n",
+      "loading data from compressed_datasets_models/BG_CIF_dataset_large.tar.gz...\n",
+      "extracting files...: 100%|███████████| 126334/126334 [00:03<00:00, 34008.62it/s]\n",
+      "saving data to compressed_datasets_models/BG_CIF_dataset_large.pkl.gz...\n",
       "conversion complete!\n"
      ]
     }
    ],
    "source": [
     "# turn the tar.gz into pickle\n",
-    "!python bin/tar_to_pickle.py BG_datasets/BG_CIF_dataset_large.tar.gz BG_cifs_process_steps/BG_data_large.pkl.gz"
+    "!python bin/utils/tar_to_pickle.py compressed_datasets_models/BG_CIF_dataset_large.tar.gz compressed_datasets_models/BG_CIF_dataset_large.pkl.gz"
    ]
   },
   {
@@ -230,24 +230,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading data from BG_cifs_process_steps/BG_data_large.pkl.gz...\n",
-      "number of CIFs to deduplicate: 126,334\n",
-      "100%|███████████████████████████████| 126334/126334 [00:00<00:00, 176292.31it/s]\n",
-      "number of entries to write: 114,751\n",
-      "saving data to BG_cifs_process_steps/BG_large_dedup.pkl.gz...\n"
+      "Loading binary data from compressed_datasets_models/BG_CIF_dataset_large.pkl.gz...\n",
+      "Number of CIFs loaded: 126,334\n",
+      "Deduplicating binary CIF data...\n",
+      "Processing CIFs: 100%|██████████████| 126334/126334 [00:01<00:00, 121457.21it/s]\n",
+      "Number of entries after deduplication: 114,751\n",
+      "Saving deduplicated binary data to compressed_datasets_models/BG_large_dedup.pkl.gz...\n",
+      "Deduplication completed successfully.\n"
      ]
     }
    ],
    "source": [
     "# deduplicate the data\n",
-    "!python bin/deduplicate.py BG_cifs_process_steps/BG_data_large.pkl.gz --out BG_cifs_process_steps/BG_large_dedup.pkl.gz"
+    "!python bin/pre_processing/deduplicate.py compressed_datasets_models/BG_CIF_dataset_large.pkl.gz --out compressed_datasets_models/BG_large_dedup.pkl.gz"
    ]
   },
   {
@@ -288,23 +290,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading data from CIF_BG_proj/BG_cifs_process_steps/BG_large_dedup.pkl.gz...\n",
-      "100%|█████████████████████████████████| 114751/114751 [00:46<00:00, 2471.04it/s]\n",
+      "loading data from compressed_datasets_models/BG_large_dedup.pkl.gz...\n",
+      "100%|█████████████████████████████████| 114751/114751 [00:41<00:00, 2760.45it/s]\n",
       "number of CIFs: 57476\n",
-      "saving data to CIF_BG_proj/BG_cifs_process_steps/BG_large_prep.pkl.gz...\n"
+      "saving data to compressed_datasets_models/BG_large_prep.pkl.gz...\n"
      ]
     }
    ],
    "source": [
     "#Data augmentation preprocess step\n",
-    "!python bin/pre_processing/preprocess_more.py CIF_BG_proj/BG_cifs_process_steps/BG_large_dedup.pkl.gz --out CIF_BG_proj/BG_cifs_process_steps/BG_large_prep.pkl.gz --workers 4"
+    "!python bin/pre_processing/preprocess_more.py compressed_datasets_models/BG_large_dedup.pkl.gz --out compressed_datasets_models/BG_large_prep.pkl.gz --workers 4"
    ]
   },
   {
@@ -346,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading data from CIF_BG_proj/BG_cifs_process_steps/BG_large_prep.pkl.gz...\n",
+      "loading data from compressed_datasets_models/BG_large_prep.pkl.gz...\n",
       "splitting dataset...\n",
       "number of CIFs in train set: 51,871\n",
       "number of CIFs in validation set: 2,731\n",
@@ -366,10 +368,10 @@
    ],
    "source": [
     "# split dataset into train and test and val\n",
-    "!python bin/pre_processing/split.py CIF_BG_proj/BG_cifs_process_steps/BG_large_prep.pkl.gz \\\n",
-    "--train_out CIF_BG_proj/BG_cifs_process_steps/BG_large_train_excl_0BG.pkl.gz \\\n",
-    "--val_out CIF_BG_proj/BG_cifs_process_steps/BG_large_val_excl_0BG.pkl.gz \\\n",
-    "--test_out CIF_BG_proj/BG_cifs_process_steps/BG_large_test_excl_0BG.pkl.gz \\\n",
+    "!python bin/pre_processing/split.py compressed_datasets_models/BG_large_prep.pkl.gz \\\n",
+    "--train_out CIF_BG_proj/0BG_datasets/BG_large_train_excl_0BG.pkl.gz \\\n",
+    "--val_out CIF_BG_proj/0BG_datasets/BG_large_val_excl_0BG.pkl.gz \\\n",
+    "--test_out CIF_BG_proj/0BG_datasets/BG_large_test_excl_0BG.pkl.gz \\\n",
     "--validation_size 0.05 \\\n",
     "--test_size 0.05"
    ]
