fixed LoRA adaptation because it was adding 2 sets of LoRA layers, then fixd inference for this

--- a/notebooks/rsync.ipynb
+++ b/notebooks/rsync.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,10 @@
       " Access to and use of this system are restricted to authorised individuals\n",
       " and subject to UCL Computing Regulations.\n",
       " ------------------------------------------------------------------------\n",
-      " \n"
+      " \n",
+      "Currently Loaded Modulefiles:\n",
+      " 1) gcc-libs/10.2.0        3) cuda/11.8.0/gnu-10.2.0   5) tmux/3.3a  \n",
+      " 2) compilers/gnu/10.2.0   4) nano/2.4.2              \n"
      ]
     },
     {
@@ -133,26 +136,43 @@
      "output_type": "stream",
      "text": [
       "sending incremental file list\n",
-      "bin/\n",
+      ".gitignore\n",
+      "          3,528 100%    2.70MB/s    0:00:00 (xfr#1, to-chk=23/25)\n",
+      "ARTIFACTS.md\n",
+      "         33,666 100%   16.05MB/s    0:00:00 (xfr#2, to-chk=22/25)\n",
+      "BENCHMARKING.md\n",
+      "          4,974 100%    1.58MB/s    0:00:00 (xfr#3, to-chk=21/25)\n",
+      "LICENSE\n",
+      "          1,071 100%  261.47kB/s    0:00:00 (xfr#4, to-chk=20/25)\n",
+      "README.md\n",
+      "         37,403 100%    5.95MB/s    0:00:00 (xfr#5, to-chk=19/25)\n",
+      "Scheme.png\n",
+      "         61,773 100%    7.36MB/s    0:00:00 (xfr#6, to-chk=18/25)\n",
+      "Singularity.def\n",
+      "            926 100%  100.48kB/s    0:00:00 (xfr#7, to-chk=17/25)\n",
+      "Singularity_2.def\n",
+      "          1,156 100%  112.89kB/s    0:00:00 (xfr#8, to-chk=16/25)\n",
+      "bandgap_predictions_NTGvsRH(ftA).svg\n",
+      "        867,377 100%   28.52MB/s    0:00:00 (xfr#9, to-chk=15/25)\n",
+      "bandgap_predictions_ftHvsLoRA.svg\n",
+      "        860,594 100%   19.09MB/s    0:00:00 (xfr#10, to-chk=14/25)\n",
+      "requirements.txt\n",
+      "            254 100%    5.64kB/s    0:00:00 (xfr#11, to-chk=12/25)\n",
+      "setup.py\n",
+      "            189 100%    4.19kB/s    0:00:00 (xfr#12, to-chk=11/25)\n",
+      ".vscode/launch.json\n",
+      "            740 100%    2.87kB/s    0:00:00 (xfr#13, to-chk=7/25)\n",
+      ".vscode/settings.json\n",
+      "             29 100%    0.11kB/s    0:00:00 (xfr#14, to-chk=6/25)\n",
       "bin/cifextd_inference copy.py\n",
-      "          9,525 100%    0.00kB/s    0:00:00 (xfr#1, to-chk=98/538)\n",
+      "          9,525 100%   36.48kB/s    0:00:00 (xfr#15, to-chk=5/25)\n",
       "bin/cifextd_inference.py\n",
-      "          6,929 100%    6.61MB/s    0:00:00 (xfr#2, to-chk=97/538)\n",
+      "          6,907 100%   26.35kB/s    0:00:00 (xfr#16, to-chk=4/25)\n",
       "bin/regr_inference.py\n",
-      "          7,875 100%    7.51MB/s    0:00:00 (xfr#3, to-chk=95/538)\n",
-      "bin/train.py\n",
-      "          6,435 100%    6.14MB/s    0:00:00 (xfr#4, to-chk=94/538)\n",
-      "bin/__pycache__/\n",
-      "bin/__pycache__/train.cpython-310.pyc\n",
-      "          4,381 100%    4.18MB/s    0:00:00 (xfr#5, to-chk=87/538)\n",
-      "bin/__pycache__/train_utils.cpython-310.pyc\n",
-      "         19,476 100%   18.57MB/s    0:00:00 (xfr#6, to-chk=86/538)\n",
-      "crystallm/__pycache__/\n",
-      "crystallm/__pycache__/_model.cpython-310.pyc\n",
-      "         20,718 100%    9.88MB/s    0:00:00 (xfr#7, to-chk=8/538)\n",
+      "          7,857 100%   29.86kB/s    0:00:00 (xfr#17, to-chk=2/25)\n",
       "\n",
-      "sent 39,303 bytes  received 930 bytes  16,093.20 bytes/sec\n",
-      "total size is 8,911,561,484  speedup is 221,498.81\n"
+      "sent 223,741 bytes  received 1,207 bytes  26,464.47 bytes/sec\n",
+      "total size is 1,988,663  speedup is 8.84\n"
      ]
     }
    ],
@@ -175,8 +195,15 @@
     "    --exclude 'useless/' \\\n",
     "    --exclude 'inference_plots/' \\\n",
     "    --exclude 'hp_search/' \\\n",
+    "    --exclude '.git/' \\\n",
+    "    --exclude 'bin/post_processing/' \\\n",
+    "    --exclude 'bin/pre_processing/' \\\n",
+    "    --exclude 'bin/utils/' \\\n",
+    "    --exclude 'config/' \\\n",
+    "    --exclude 'crystallm/' \\\n",
+    "    --exclude 'bin/train.py' \\\n",
     "    -e \"ssh -i ~/.ssh/exported-keyfile-from-putty-np -o ProxyJump=gateway\" \\\n",
-    "    /home/uccacbo/CrystaLLM/ uccacbo@myriad.rc.ucl.ac.uk:/scratch/scratch/uccacbo/CrystaLLM/"
+    "    /home/uccacbo/CrystaLLM-Prop/ uccacbo@myriad.rc.ucl.ac.uk:/scratch/scratch/uccacbo/CrystaLLM/"
    ]
   },
   {
@@ -311,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -336,19 +363,21 @@
      "output_type": "stream",
      "text": [
       "receiving incremental file list\n",
-      "./\n",
-      "crystallm_regression_BG_myriad/\n",
-      "crystallm_regression_BG_myriad/emissions.csv\n",
-      "          2,816 100%    2.69MB/s    0:00:00 (xfr#1, to-chk=2/15)\n",
-      "hps_regression_BG_myriad/\n",
-      "hps_regression_BG_myriad/emissions.csv\n",
-      "          1,836 100%    1.75MB/s    0:00:00 (xfr#2, to-chk=1/15)\n",
-      "hps_regression_BG_myriad_LoRA/\n",
-      "hps_regression_BG_myriad_LoRA/emissions.csv\n",
-      "          4,789 100%    4.57MB/s    0:00:00 (xfr#3, to-chk=0/15)\n",
+      "bin/regr_inference.py\n",
+      "          8,118 100%    7.74MB/s    0:00:00 (xfr#1, to-chk=92/121)\n",
+      "bin/regr_inference_LoRA_4.py\n",
+      "         10,407 100%    4.96MB/s    0:00:00 (xfr#2, to-chk=91/121)\n",
+      "config/regression_BG/regression_BG_LoRA_myriad.yaml\n",
+      "          1,786 100%  872.07kB/s    0:00:00 (xfr#3, to-chk=50/121)\n",
+      "inference_plots/\n",
+      "inference_plots/BG_regr_LoRA/\n",
+      "inference_plots/BG_regr_LoRA/MAE_0.5749_MSE_0.6908.pkl\n",
+      "         83,953 100%    8.90MB/s    0:00:00 (xfr#4, to-chk=20/121)\n",
+      "inference_plots/BG_regr_LoRA/MAE_0.5749_MSE_0.6908.png\n",
+      "        128,199 100%    2.98MB/s    0:00:00 (xfr#5, to-chk=19/121)\n",
       "\n",
-      "sent 541 bytes  received 4,297 bytes  1,935.20 bytes/sec\n",
-      "total size is 29,220  speedup is 6.04\n"
+      "sent 885 bytes  received 149,680 bytes  33,458.89 bytes/sec\n",
+      "total size is 4,123,650  speedup is 27.39\n"
      ]
     }
    ],
@@ -365,15 +394,20 @@
     "    --exclude 'model_ckpts/regression_models/BG_head' \\\n",
     "    --exclude 'model_ckpts/regression_models/BG_LoRA' \\\n",
     "    --exclude 'model_ckpts/regression_models/BG_head_test' \\\n",
-    "    --exclude 'crystallm/' \\\n",
-    "    --exclude 'bin/' \\\n",
     "    --exclude 'notebooks/' \\\n",
     "    --exclude 'compressed_datasets_models/' \\\n",
     "    --exclude 'model_ckpts/' \\\n",
     "    --exclude 'jobs/' \\\n",
     "    --exclude 'crystallm.egg-info/' \\\n",
+    "    --exclude 'bin/post_processing/' \\\n",
+    "    --exclude 'bin/pre_processing/' \\\n",
+    "    --exclude 'bin/utils/' \\\n",
+    "    --exclude '.git/' \\\n",
+    "    --exclude 'useless/' \\\n",
+    "    --exclude 'crystallm/__pycache__/' \\\n",
+    "    --exclude 'bin/__pycache__/' \\\n",
     "    -e \"ssh -i ~/.ssh/exported-keyfile-from-putty-np -o ProxyJump=gateway\" \\\n",
-    "    uccacbo@myriad.rc.ucl.ac.uk:/scratch/scratch/uccacbo/CrystaLLM/ /home/uccacbo/CrystaLLM/"
+    "    uccacbo@myriad.rc.ucl.ac.uk:/scratch/scratch/uccacbo/CrystaLLM/ /home/uccacbo/CrystaLLM-Prop/"
    ]
   },
   {
@@ -398,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -419,16 +453,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error while terminating subprocess (pid=53219): \n"
+      "Error while terminating subprocess (pid=2518588): \n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "\n",
-    "rsync -avzu --dry-run --progress \\\n",
+    "rsync -avzu --dry-run --progress\\\n",
     "    -e \"ssh -i ~/.ssh/exported-keyfile-from-putty-np -o ProxyJump=gateway\" \\\n",
-    "    uuccacbo@myriad.rc.ucl.ac.uk:/scratch/scratch/uccacbo/CrystaLLM/inference_plots /home/uccacbo/CrystaLLM/inference_plots/\n"
+    "    uccacbo@myriad.rc.ucl.ac.uk:/scratch/scratch/uccacbo/CrystaLLM/inference_plots/ /home/uccacbo/CrystaLLM-Prop/inference_plots/"
    ]
   },
   {
