--- a/notebooks/rsync.ipynb
+++ b/notebooks/rsync.ipynb
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -363,21 +363,11 @@
      "output_type": "stream",
      "text": [
       "receiving incremental file list\n",
-      "bin/regr_inference.py\n",
-      "          8,118 100%    7.74MB/s    0:00:00 (xfr#1, to-chk=92/121)\n",
-      "bin/regr_inference_LoRA_4.py\n",
-      "         10,407 100%    4.96MB/s    0:00:00 (xfr#2, to-chk=91/121)\n",
-      "config/regression_BG/regression_BG_LoRA_myriad.yaml\n",
-      "          1,786 100%  872.07kB/s    0:00:00 (xfr#3, to-chk=50/121)\n",
-      "inference_plots/\n",
-      "inference_plots/BG_regr_LoRA/\n",
-      "inference_plots/BG_regr_LoRA/MAE_0.5749_MSE_0.6908.pkl\n",
-      "         83,953 100%    8.90MB/s    0:00:00 (xfr#4, to-chk=20/121)\n",
-      "inference_plots/BG_regr_LoRA/MAE_0.5749_MSE_0.6908.png\n",
-      "        128,199 100%    2.98MB/s    0:00:00 (xfr#5, to-chk=19/121)\n",
+      "crystallm_regression_BG_myriad/emissions.csv\n",
+      "          3,794 100%    3.62MB/s    0:00:00 (xfr#1, to-chk=2/15)\n",
       "\n",
-      "sent 885 bytes  received 149,680 bytes  33,458.89 bytes/sec\n",
-      "total size is 4,123,650  speedup is 27.39\n"
+      "sent 633 bytes  received 1,062 bytes  484.29 bytes/sec\n",
+      "total size is 31,672  speedup is 18.69\n"
      ]
     }
    ],
@@ -407,7 +397,7 @@
     "    --exclude 'crystallm/__pycache__/' \\\n",
     "    --exclude 'bin/__pycache__/' \\\n",
     "    -e \"ssh -i ~/.ssh/exported-keyfile-from-putty-np -o ProxyJump=gateway\" \\\n",
-    "    uccacbo@myriad.rc.ucl.ac.uk:/scratch/scratch/uccacbo/CrystaLLM/ /home/uccacbo/CrystaLLM-Prop/"
+    "    uccacbo@myriad.rc.ucl.ac.uk:/scratch/scratch/uccacbo/CrystaLLM/comp_metrics/ /home/uccacbo/CrystaLLM-Prop/comp_metrics/"
    ]
   },
   {
